welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
	var Biscuit = estSurBiscuit()
	var 
	avance;
	getCouleurSol() match{
		case Color.green => {baisseBrosse;leveBrosse;}
		case _ => recule;	
	}
	while (getCouleurSol!=Color.green) {
		
	}
	
	
	if (estFaceMur) recule;
	return Biscuit
}